--- a/client/src/component/UploadForm.css
+++ b/client/src/component/UploadForm.css
@@ -22,4 +22,19 @@
   background-color: gray;
   transition: 0.5s;
   color: white;
+} 
+
+.image-preview {
+  width: 0%;
+  opacity: 0;
+  display: block;
+  margin: 0px auto 20px auto;
+  border-radius: 10px;
+  border: 5px solid gray;
+}
+
+.image-preview-show {
+  opacity: 100;
+  width: 50%;
+  transition: 0.5s;
 }
